<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Furnishe°</string>
    <string name="g_app_name">Furnishe°</string>
    <string name="g_the_right_address">The Right Address \n For Shopping \n Anyday</string>

    <!--    <string name="g_for_shopping">For Shopping</string>-->
    <!--    <string name="g_any_day">Anyday</string>-->

    <string name="g_best_quality">It is now very easy to reach the \n best quality among all the \n products on the internet!</string>
    <string name="g_start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_your_orders">All your orders in one \n saved package</string>
    <string name="g_register">Register</string>
    <string name="g_let_s_register">Let\'s Register</string>
    <string name="g_do_you_have_an_account_log_in">Do you have an account? log in</string>
    <string name="g_first_name">First Name</string>
    <string name="g_email">Email</string>
    <string name="g_second_name">Last Name</string>
    <string name="g_password">Password</string>
    <string name="g_don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="g_let_s_login">Let\'s Login</string>
    <string name="g_log_in">Log in</string>
    <string name="g_google">Google</string>
    <string name="g_facebook">Facebook</string>
    <string name="first_name_cant_be_empty">First name can\'t be empty</string>
    <string name="last_name_cant_be_empty">Last name can\'t be empty</string>
    <string name="email_cant_be_empty">Email can\'t be empty</string>
    <string name="password_cant_be_empty">password can\'t be empty</string>
    <string name="password_at_least_six">password should have 6</string>
    <string name="valid_email">check your email</string>
    <string name="signed_up_successfully">you have created new account, login now</string>
    <string name="g_home">Home</string>
    <string name="g_search">search</string>
    <string name="g_cart">Cart</string>
    <string name="g_profile">profile</string>
    <string name="g_add_to_cart">Add to cart</string>
    <string name="g_search_now">Search Now</string>
    <string name="g_best_deals">Best Deals</string>
    <string name="g_chair">Chair</string>
    <string name="g_cupboard">Cupboard</string>
    <string name="g_table">Table</string>
    <string name="g_accessory">Accessory</string>
    <string name="g_furniture">Furniture</string>
    <string name="g_enlightening">Enlightening</string>
    <string name="g_best_products">Best Products</string>
    <string name="g_see_product">See product</string>
    <string name="g_color">Color</string>
    <string name="g_size">Size</string>
    <string name="g_add_to_card">Add to Card</string>
    <string name="g_added">Added</string>
    <string name="g_already_added">Product is in your cart</string>
    <string name="g_please_select_color">Please select color</string>
    <string name="g_please_select_size">Please select size</string>
    <string name="g_my_cart">My Cart</string>
    <string name="g_checkout">Checkout</string>
    <string name="g_total">Total:</string>
    <string name="g_your_shopping_cart_is_empty">Your Shopping Cart\n Is Empty</string>
    <string name="g_delete_item">Delete item</string>
    <string name="g_are_you_sure_you_want_to_delete_this_item_from_cart">Are you sure you want to delete this item from cart ?</string>
    <string name="g_no">No</string>
    <string name="g_yes">Yes</string>
    <string name="g_categories">Categories</string>
    <string name="g_cancel">Cancel</string>
    <string name="g_payment_methods">Payment methods</string>
    <string name="payment_explanation">Currently Keline only supports payments when receiving the product, more options are coming soon.</string>
    <string name="g_shipping">Shipping</string>
    <string name="g_full_name">Full Name</string>
    <string name="g_city">City</string>
    <string name="g_phone">Phone</string>
    <string name="g_state">State</string>
    <string name="g_save">Save</string>
    <string name="g_address">Address</string>
    <string name="g_address_location_ie_home">Address Location ie. Home</string>
    <string name="g_update">Update</string>
    <string name="g_place_order">Place Order</string>
    <string name="g_delete">Delete</string>
    <string name="g_select_address_error">Select or add new address !</string>
    <string name="g_place_order_confirmation">Are you sure you want to place this order ?</string>
    <string name="g_confirm">Confirm</string>
    <string name="place_order_error">Error occurred try again later or contact us</string>
    <string name="g_payment_failed">Your Order is Failed !</string>
    <string name="g_payment_success">Your Order is Completed</string>
    <string name="order_error_message">Try again later, if this error keeps showing up please contact us .</string>
    <string name="order_success_message">We received your order and we will contact you through a phone call in the next 24H
    \n your order number is #</string>
    <string name="g_track_order">You can track your order by going to your profile and select all orders then select your recent order.</string>
    <string name="g_settings">Settings</string>
    <string name="g_edit_personal_details">Edit personal details</string>
    <string name="g_orders">Orders</string>
    <string name="g_order">Order</string>
    <string name="g_all_orders">All Orders</string>
    <string name="g__track_order">Track Order</string>
    <string name="g_notifications">Notifications</string>
    <string name="g_regional">Regional</string>
    <string name="g_language">Language</string>
    <string name="g_logout">Logout</string>
    <string name="g_billing">Billing And Addresses</string>
    <string name="g_version">Version</string>
    <string name="error_occurred">Oops error occurred</string>
    <string name="g_edit_profile">Edit Profile</string>
    <string name="g_change_forgot_password">Forgot/Change password</string>
    <string name="g_cant_change_email_message">You cannot change your email address, if you are looking to change it please contact with us</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="g_no_orders_to_show">No orders to show</string>
    <string name="g_reset_password">Reset Password</string>
    <string name="g_reset_password_message">We will send you password reset link on your Email</string>
    <string name="g_send">Send</string>
    <string name="g_password_reset">We sent reset password link to your email</string>
    <string name="g_order_placed">Order Placed</string>
    <string name="g_shipped">Shipped</string>
    <string name="g_delivered">Delivered</string>
    <string name="g_products">Products</string>
    <string name="g_coming_soon">This feature is not available yet</string>
    <string name="g_english">English</string>
    <string name="g_arabic">عربي</string>
    <string name="g_forgot_password">Forgot Password</string>
    <string name="g_check_your_email">Check your Email</string>
    <string name="street">Street</string>
    <string name="g_order_details">Order Details</string>
    <string name="product_added">Product added to your cart</string>
    <string name="switch_account">Switch Account</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="_2000">$2000</string>
    <string name="_1600">$1600</string>
    <string name="easy_e_commerce_experience">Easy E-Commerce Experience</string>
    <string name="powered_by_depi_group">Powered By Depi Group</string>
    <string name="_50">50$</string>
    <string name="_1">1</string>
    <string name="l">L</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="g_details">Details</string>
    <string name="lofcoding">Lofcoding</string>
    <string name="_6000">$6000</string>
    <string name="customer_support">Customer Support</string>
    <string name="help_text">Have a Problem? Talk to us for the answer</string>
    <string name="chatbot_will_be_available_in_second_version_n_keep_updated">ChatBot will be available in our second version \n keep updated</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
    <string name="g_last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_items_found">No Items Found</string>
    <string name="furniture">Furniture</string>
    <string name="desciption" translatable="false">Create the perfect Furniture for your needs by \n \t mixing and matching shapes, materials
        , \n designs, and colors until you find your favorite \n \t \t \t \t \t \t \t \t \t \t \t combination.</string>
    <string name="sign_up" translatable="false">\t Sign Up</string>
    <string name="login">\t Login</string>
    <string name="start" translatable="false">Start \n</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account ? </string>
    <string name="description_signIn">Hi ! Welcome back ,you \'ve been missed</string>
    <string name="create_account">Create Account</string>
    <string name="description_sign_up">Fill your information below or register \n \t \t \t \t \t with your social account</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email" translatable="false">We will send you the password reset link to your Email</string>
    <string name="enter_your_email" translatable="false">Enter your Email</string>
    <string name="send" translatable="false">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password" translatable="false">Forgot Password</string>
    <string name="already_have_an_account" translatable="false">Already have an account ?</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="password_changed">Password Changed</string>
    <string name="you_can_now_use_your_new_password_to_login_to_your_account">You can now use your new password to login to your account.</string>
    <string name="enter_your_email_for_the_verification_process_we_will_send_a_4_digits_code_to_your_email">Enter your email for the verification process. We will send a 4 digits code to your email.</string>
    <string name="send_code">Send Code</string>
    <string name="set_the_new_password_for_your_account">Set the new password for your account.</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="g_continue">Continue</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="enter_the_4_digit_code_that_you_received_on_your_email">Enter the 4 digit code that you received on your email.</string>
    <string name="didn_t_recieve_the_otp">Didn\'t recieve the Otp?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="phone_number">Phone Number</string>

    <!--    <string name="open_menu">Open Menu</string>-->
<!--    <string name="close_menu">Close Menu</string>-->
<!--    <string name="my_store">My Store</string>-->
<!--    <string name="g_total_sales">Total Sales</string>-->
<!--    <string name="today_sales">Today Sales</string>-->
<!--    <string name="pending_orders">Pending Orders</string>-->
<!--    <string name="help">Help</string>-->
<!--    <string name="help_text">Got a question? We\'re here to answer!</string>-->

</resources>



