<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Back Button -->

    <!-- Title -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow_back"
        app:tint="#704F38" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="#704F38"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Subtitle -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:text="@string/enter_your_email_for_the_verification_process_we_will_send_a_4_digits_code_to_your_email"
        android:textColor="#666"
        android:textSize="14sp" />

    <!-- Email Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/g_email"
        android:textColor="#666"
        android:textSize="16sp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000000" />

    <!-- Send Code Button -->
    <Button
        android:id="@+id/btnSendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#704F38"
        android:padding="12dp"
        android:text="@string/send_code"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>