<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background"
        android:contentDescription="@string/app_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_kleine_shape" />


        <TextView
            android:id="@+id/tvRightAddressForShopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"

            android:gravity="center"

            android:text="@string/g_the_right_address"

            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName" />


        <TextView
            android:id="@+id/tvQuality"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/g_best_quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"

            app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccountOptions"
            style="@style/coloredButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"

            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/g_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"

            app:layout_constraintTop_toBottomOf="@id/tvQuality" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccountOptions"
            style="@style/whiteButtonStyle"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:text="@string/g_log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>