<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow_back"
        app:tint="@color/brown" />

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/enter_otp_code"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Subtitle -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:text="@string/enter_the_4_digit_code_that_you_received_on_your_email"
        android:textColor="@color/brown"
        android:textSize="14sp" />

    <!-- Code Input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/code1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/brown"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:hint="1" />

        <EditText
            android:id="@+id/code2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/brown"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:hint="2"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/code3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/brown"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:hint="3"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/code4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/brown"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:hint="4"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_recieve_the_otp"
            android:textColor="@color/brown"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/resend_otp"
            android:textColor="@color/g_red"
            android:textStyle="bold" />


    </LinearLayout>

    <!-- Continue Button -->
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#704F38"
        android:padding="12dp"
        android:text="@string/g_continue"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</LinearLayout>
