<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_5sdp">

        <View
            android:id="@+id/topLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageCartProduct"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@color/brown"
            app:layout_constraintBottom_toTopOf="@+id/topLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductCartName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:lines="1"
            android:text="@string/g_chair"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imageCartProduct"
            app:layout_constraintTop_toTopOf="@id/imageCartProduct" />

        <TextView
            android:id="@+id/tvProductCartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_50"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvProductCartName"
            app:layout_constraintTop_toBottomOf="@id/tvProductCartName" />

        <ImageView
            android:id="@+id/imagePlus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageMinus"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageCartProductSize" />

        <TextView
            android:id="@+id/tvCartProductQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/_1"
            app:layout_constraintBottom_toBottomOf="@id/imageMinus"
            app:layout_constraintEnd_toStartOf="@id/imagePlus"
            app:layout_constraintStart_toEndOf="@id/imageMinus"
            app:layout_constraintTop_toTopOf="@id/imageMinus" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageCartProductColor"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:src="@color/brown"
            app:layout_constraintStart_toStartOf="@id/tvProductCartPrice"
            app:layout_constraintTop_toBottomOf="@id/tvProductCartPrice" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageCartProductSize"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="5dp"
            android:src="@color/g_blue_gray200"
            app:layout_constraintStart_toEndOf="@id/imageCartProductColor"
            app:layout_constraintTop_toTopOf="@id/imageCartProductColor" />

        <TextView
            android:id="@+id/tvCartProductSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/imageCartProductSize"
            app:layout_constraintEnd_toEndOf="@id/imageCartProductSize"
            app:layout_constraintStart_toStartOf="@id/imageCartProductSize"
            app:layout_constraintTop_toTopOf="@id/imageCartProductSize" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>